--- a/ProcessData/ProcessData.csproj
+++ b/ProcessData/ProcessData.csproj
@@ -1,12 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProcessData\ProcessData.csproj" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.5" />
   </ItemGroup>
 
 </Project>
