--- a/ProcessData/ProcessData.csproj
+++ b/ProcessData/ProcessData.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProcessXml\ProcessXml.csproj" />
+  </ItemGroup>
+
 </Project>
