--- a/ProcessData/ProcessData.csproj
+++ b/ProcessData/ProcessData.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ProcessXml\ProcessXml.csproj" />
+    <ProjectReference Include="..\ScottPlot-4.0-stable\src\ScottPlot\ScottPlot.csproj" />
   </ItemGroup>
 
 </Project>
